; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/blob/extr_filter.c_test_object_blob_filter__stats.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/blob/extr_filter.c_test_object_blob_filter__stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@CRLF_NUM_TEST_OBJECTS = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@g_crlf_oids = common dso_local global i32* null, align 8
@g_crlf_filtered_stats = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_object_blob_filter__stats() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %5, i32* %3, align 4
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %30, %0
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* @CRLF_NUM_TEST_OBJECTS, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %33

10:                                               ; preds = %6
  %11 = load i32, i32* @g_repo, align 4
  %12 = load i32*, i32** @g_crlf_oids, align 8
  %13 = load i32, i32* %1, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = call i32 @git_blob_lookup(i32** %2, i32 %11, i32* %15)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @git_blob__getbuf(i32* %3, i32* %18)
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = call i32 @git_buf_text_gather_stats(i32* %4, i32* %3, i32 0)
  %22 = load i32*, i32** @g_crlf_filtered_stats, align 8
  %23 = load i32, i32* %1, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = call i32 @memcmp(i32* %25, i32* %4, i32 4)
  %27 = call i32 @cl_assert_equal_i(i32 0, i32 %26)
  %28 = load i32*, i32** %2, align 8
  %29 = call i32 @git_blob_free(i32* %28)
  br label %30

30:                                               ; preds = %10
  %31 = load i32, i32* %1, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %1, align 4
  br label %6

33:                                               ; preds = %6
  %34 = call i32 @git_buf_dispose(i32* %3)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_blob_lookup(i32**, i32, i32*) #1

declare dso_local i32 @git_blob__getbuf(i32*, i32*) #1

declare dso_local i32 @git_buf_text_gather_stats(i32*, i32*, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @memcmp(i32*, i32*, i32) #1

declare dso_local i32 @git_blob_free(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
